<resources>
    <string name="app_name">BiblioTech</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_list">List</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="book_thumb">Book Thumbnail</string>
    <string name="desc">description</string>
    <string name="id">ID:</string>
    <string name="isbn">ISBN:</string>

    <string name="default_book_list_name">Books</string>
    <string name="capture_accept_alt">Capture</string>

    <string name="list_fragment_title">%1$s %2$s</string>
    <string name="scan_fragment_title">%2$s  \u21e8  %1$s</string>
</resources>
