<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/book_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:focusable="false"
    android:focusableInTouchMode="false">
    tools:context=".BooksFragment"

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/book_list_always"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/book_list_data"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ViewFlipper
                    android:id="@+id/book_list_flipper"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp" >

                    <ImageView
                        android:id="@+id/book_list_thumb"
                        android:layout_width="27dp"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/book_thumb"
                        android:scaleType="fitCenter" />

                    <ImageView
                        android:src="@android:drawable/star_big_on"
                        android:layout_width="27dp"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"  />
                </ViewFlipper>

                <LinearLayout
                    android:id="@+id/book_list_titles"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/book_list_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:textSize="@dimen/book_list_title_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/book_list_subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/book_list_authors"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/book_list_open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/book_separator"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray" />

            <ImageView
                android:id="@+id/book_thumb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/book_separator"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:scaleType="center"
                android:src="@drawable/nothumb" />

            <EditText
                android:id="@+id/book_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/book_thumb"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/desc"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/book_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/book_isbn"
                android:text="@string/id" />

            <TextView
                android:id="@+id/book_volid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/book_isbn"
                android:layout_toLeftOf="@+id/book_isbn_label"
                android:layout_toRightOf="@id/book_id_label" />

            <TextView
                android:id="@+id/book_isbn_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/book_isbn"
                android:layout_alignLeft="@+id/book_thumb"
                android:layout_alignBottom="@+id/book_volid"
                android:text="@string/isbn" />

            <EditText
                android:id="@+id/book_isbn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/book_desc"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/book_isbn_label"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false" />

        </RelativeLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

    </LinearLayout>

</RelativeLayout>